sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/NameCardBasicSetting__c.object-meta.xml
<CustomObject>
    <label>名刺基本設定</label>
    <nameField>
        <label>基本設定</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>