sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/HojinkakuEquationLongAndAbbr__c.field-meta.xml
<CustomField>
    <fullName>HojinkakuEquationLongAndAbbr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>法人格の略称を正称の表記とみなして会社名を比較する</label>
    <type>Checkbox</type>
</CustomField>