sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/MappingLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>MappingLastModifiedDateTime__c</fullName>
    <label>マッピング最終更新日</label>
    <type>DateTime</type>
</CustomField>