sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/MappingLastModifiedUser__c.field-meta.xml
<CustomField>
    <fullName>MappingLastModifiedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>マッピング最終更新者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MappingLastModifiedUser</relationshipName>
    <type>Lookup</type>
</CustomField>