sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/MConditionLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>MConditionLastModifiedDateTime__c</fullName>
    <label>連携設定最終更新日</label>
    <type>DateTime</type>
</CustomField>