sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/MConditionLastModifiedUser__c.field-meta.xml
<CustomField>
    <fullName>MConditionLastModifiedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>連携設定最終更新者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MConditionLastModifiedUser</relationshipName>
    <type>Lookup</type>
</CustomField>