sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/NayoseJyoken__c.field-meta.xml
<CustomField>
    <fullName>NayoseJyoken__c</fullName>
    <label>名寄せ:条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>