sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistAccountCompareCustomize__c.field-meta.xml
<CustomField>
    <fullName>RegistAccountCompareCustomize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:取引先 会社名と比較する項目をカスタマイズする</label>
    <type>Checkbox</type>
</CustomField>