sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistAccountCompareField__c.field-meta.xml
<CustomField>
    <fullName>RegistAccountCompareField__c</fullName>
    <label>取引先登録:取引先 会社名と比較する項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>