sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistAccountConfirmValue__c.field-meta.xml
<CustomField>
    <fullName>RegistAccountConfirmValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:取引先更新前後の値の確認を行う</label>
    <type>Checkbox</type>
</CustomField>