sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistAccountNotOverWrite__c.field-meta.xml
<CustomField>
    <fullName>RegistAccountNotOverWrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:取引先を名刺情報で上書きしない</label>
    <type>Checkbox</type>
</CustomField>