sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistAccountQueryRecordTypeIds__c.field-meta.xml
<CustomField>
    <fullName>RegistAccountQueryRecordTypeIds__c</fullName>
    <label>取引先登録:取引先レコードタイプ</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>