sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistContactNotOverWrite__c.field-meta.xml
<CustomField>
    <fullName>RegistContactNotOverWrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:取引先責任者を名刺情報で上書きしない</label>
    <type>Checkbox</type>
</CustomField>