sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistContactQueryRecordTypeIds__c.field-meta.xml
<CustomField>
    <fullName>RegistContactQueryRecordTypeIds__c</fullName>
    <label>取引先登録:取引先責任者レコードタイプ</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>