sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistDispAccountRectype__c.field-meta.xml
<CustomField>
    <fullName>RegistDispAccountRectype__c</fullName>
    <defaultValue>true</defaultValue>
    <label>取引先登録:取引先レコードタイプ選択を表示する</label>
    <type>Checkbox</type>
</CustomField>