sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistDispContactOverWriteCheckbox__c.field-meta.xml
<CustomField>
    <fullName>RegistDispContactOverWriteCheckbox__c</fullName>
    <defaultValue>true</defaultValue>
    <description>オンの場合、「既存の取引先責任者を名刺情報で上書きする」チェックボックスを表示します。</description>
    <label>取引先登録:「既存の取引先責任者を名刺情報で上書きする」を表示する</label>
    <type>Checkbox</type>
</CustomField>