sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistDispContactRectype__c.field-meta.xml
<CustomField>
    <fullName>RegistDispContactRectype__c</fullName>
    <defaultValue>true</defaultValue>
    <label>取引先登録:取引先責任者レコードタイプ選択を表示する</label>
    <type>Checkbox</type>
</CustomField>