sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistDispLeadRectype__c.field-meta.xml
<CustomField>
    <fullName>RegistDispLeadRectype__c</fullName>
    <defaultValue>true</defaultValue>
    <label>取引先登録:リードレコードタイプ選択を表示する</label>
    <type>Checkbox</type>
</CustomField>