sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistDispOverWriteCheckbox__c.field-meta.xml
<CustomField>
    <fullName>RegistDispOverWriteCheckbox__c</fullName>
    <defaultValue>true</defaultValue>
    <description>v.1.21から、オブジェクトごとに項目を設けた。未使用</description>
    <label>取引先登録:「上書きする」チェックボックスを表示する</label>
    <type>Checkbox</type>
</CustomField>