sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistLeadCompareCustomize__c.field-meta.xml
<CustomField>
    <fullName>RegistLeadCompareCustomize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:リード 会社名と比較する項目をカスタマイズする</label>
    <type>Checkbox</type>
</CustomField>