sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistLeadCompareField__c.field-meta.xml
<CustomField>
    <fullName>RegistLeadCompareField__c</fullName>
    <label>取引先登録:リード 会社名と比較する項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>