sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistLeadConfirmValue__c.field-meta.xml
<CustomField>
    <fullName>RegistLeadConfirmValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:リード更新前後の値の確認を行う</label>
    <type>Checkbox</type>
</CustomField>