sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistLeadNoToDo__c.field-meta.xml
<CustomField>
    <fullName>RegistLeadNoToDo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:リードToDo登録しない</label>
    <type>Checkbox</type>
</CustomField>