sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistLeadNotOverWrite__c.field-meta.xml
<CustomField>
    <fullName>RegistLeadNotOverWrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:リードを名刺情報で上書きしない</label>
    <type>Checkbox</type>
</CustomField>