sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistLeadQueryRecordTypeIds__c.field-meta.xml
<CustomField>
    <fullName>RegistLeadQueryRecordTypeIds__c</fullName>
    <label>取引先登録:リードレコードタイプ</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>