sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistLeadToDoOwner__c.field-meta.xml
<CustomField>
    <fullName>RegistLeadToDoOwner__c</fullName>
    <label>取引先登録:リードToDoの任命先</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>リードの所有者</fullName>
                <default>true</default>
                <label>リードの所有者</label>
            </value>
            <value>
                <fullName>名刺の所有者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>