sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistLeadToDoSubject__c.field-meta.xml
<CustomField>
    <fullName>RegistLeadToDoSubject__c</fullName>
    <label>取引先登録:リードToDo件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>