sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistNoToDo__c.field-meta.xml
<CustomField>
    <fullName>RegistNoToDo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:ToDo登録しない</label>
    <type>Checkbox</type>
</CustomField>