sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RegistToDoOwner__c.field-meta.xml
<CustomField>
    <fullName>RegistToDoOwner__c</fullName>
    <label>取引先登録:ToDoの任命先</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ContactOwner</fullName>
                <default>true</default>
                <label>取引先責任者の所有者</label>
            </value>
            <value>
                <fullName>NameCardOwner</fullName>
                <label>名刺の所有者</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>