sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccount_Street__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccount_Street__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:町名・番地</label>
    <type>Checkbox</type>
</CustomField>