sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccountAddressPref__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccountAddressPref__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:都道府県</label>
    <type>Checkbox</type>
</CustomField>