sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccountCity__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccountCity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:市区郡</label>
    <type>Checkbox</type>
</CustomField>