sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccountCompany__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccountCompany__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:取引先名</label>
    <type>Checkbox</type>
</CustomField>