sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccountNOExistCreateNew__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccountNOExistCreateNew__c</fullName>
    <defaultValue>true</defaultValue>
    <description>自動連携での取引先のクエリの結果既存の取引先がなければ新規作成する</description>
    <label>自動連携:既存の取引先がなければ新規作成する</label>
    <type>Checkbox</type>
</CustomField>