sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccountOverwrite__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccountOverwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:既存の取引先を上書きする</label>
    <type>Checkbox</type>
</CustomField>