sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccountPhone__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccountPhone__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:電話</label>
    <type>Checkbox</type>
</CustomField>