sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccountQueryRecordTypeIds__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccountQueryRecordTypeIds__c</fullName>
    <description>自動連携で既存の取引先を検索するときの対象とするレコードタイプ。</description>
    <label>自動連携:自動連携で検索対象の取引先レコードタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>