sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccountRecordTypes__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccountRecordTypes__c</fullName>
    <label>自動連携:取引先レコードタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>