sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccountSite__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccountSite__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:取引先 部門</label>
    <type>Checkbox</type>
</CustomField>