sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccountSitePartialMatch__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccountSitePartialMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:部署は部分一致検索</label>
    <type>Checkbox</type>
</CustomField>