sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccountURL__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccountURL__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:Web サイト</label>
    <type>Checkbox</type>
</CustomField>