sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiAccountZipCode__c.field-meta.xml
<CustomField>
    <fullName>RenkeiAccountZipCode__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:郵便番号</label>
    <type>Checkbox</type>
</CustomField>