sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiActive__c.field-meta.xml
<CustomField>
    <fullName>RenkeiActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>名刺データが2次納品された時に取引先・取引先責任者を自動で作成したり更新したりすることができます。「SmartVisca連携設定」タブで連携する条件の設定をします。リード拡張パッケージがインストールされている場合、取引先・取引先責任者に加えてリードを作成・更新できます。</inlineHelpText>
    <label>自動連携:自動連携機能を有効化</label>
    <type>Checkbox</type>
</CustomField>