sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiActiveCampaignMember__c.field-meta.xml
<CustomField>
    <fullName>RenkeiActiveCampaignMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>自動連携で作成・更新した人をキャンペーンメンバーにする。</description>
    <label>自動連携:スキャン時選択したキャンペーンのメンバーにする</label>
    <type>Checkbox</type>
</CustomField>