sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiCampaignStatus__c.field-meta.xml
<CustomField>
    <fullName>RenkeiCampaignStatus__c</fullName>
    <label>自動連携:キャンペーンの状況</label>
    <length>255</length>
    <type>Text</type>
</CustomField>