sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>RenkeiContactFirstName__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:名</label>
    <type>Checkbox</type>
</CustomField>