sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiContactLastName__c.field-meta.xml
<CustomField>
    <fullName>RenkeiContactLastName__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:姓</label>
    <type>Checkbox</type>
</CustomField>