sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiContactMail__c.field-meta.xml
<CustomField>
    <fullName>RenkeiContactMail__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:メールアドレス</label>
    <type>Checkbox</type>
</CustomField>