sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiContactNOExistCreateNew__c.field-meta.xml
<CustomField>
    <fullName>RenkeiContactNOExistCreateNew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>自動連携での取引先をひもづけて、その取引先に名刺に相当する取引先責任者がなければ作成する。</description>
    <inlineHelpText>自動連携での取引先をひもづけて、その取引先に名刺に相当する取引先責任者がなければ作成する。</inlineHelpText>
    <label>自動連携:既存の取引先責任者がなければ新規作成する</label>
    <type>Checkbox</type>
</CustomField>