sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiContactOverwrite__c.field-meta.xml
<CustomField>
    <fullName>RenkeiContactOverwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:既存の取引先責任者を上書きする</label>
    <type>Checkbox</type>
</CustomField>