sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiContactQueryRecordTypeIds__c.field-meta.xml
<CustomField>
    <fullName>RenkeiContactQueryRecordTypeIds__c</fullName>
    <description>自動連携で既存の取引先責任者を検索するときの対象とするレコードタイプ。</description>
    <label>自動連携:自動連携で検索対象の取引先責任者レコードタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>