sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiContactRecordTypes__c.field-meta.xml
<CustomField>
    <fullName>RenkeiContactRecordTypes__c</fullName>
    <label>自動連携:取引先責任者レコードタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>