sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiCreateContactOnAcountWithLead__c.field-meta.xml
<CustomField>
    <fullName>RenkeiCreateContactOnAcountWithLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード、取引先既存で取引先責任者を作成する</label>
    <type>Checkbox</type>
</CustomField>