sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiCreateLeadOnTooManyAccounts__c.field-meta.xml
<CustomField>
    <fullName>RenkeiCreateLeadOnTooManyAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:既存取引先が複数あり特定できないとき、リードを作る</label>
    <type>Checkbox</type>
</CustomField>