sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiExcludeHojinkaku__c.field-meta.xml
<CustomField>
    <fullName>RenkeiExcludeHojinkaku__c</fullName>
    <defaultValue>true</defaultValue>
    <description>自動連携で既存取引先の検索で、会社名は法人格を除いて中間一致検索する</description>
    <label>自動連携:取引先名は法人格を除いて検索</label>
    <type>Checkbox</type>
</CustomField>