sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiExcludeHojinkakuPartial__c.field-meta.xml
<CustomField>
    <fullName>RenkeiExcludeHojinkakuPartial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:取引先名は法人格を除いて部分一致検索</label>
    <type>Checkbox</type>
</CustomField>