sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiInheritEvent__c.field-meta.xml
<CustomField>
    <fullName>RenkeiInheritEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:名刺の活動履歴を引き継ぐ</label>
    <type>Checkbox</type>
</CustomField>