sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadAddressPref__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadAddressPref__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード都道府県</label>
    <type>Checkbox</type>
</CustomField>