sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadCity__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadCity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード市区郡</label>
    <type>Checkbox</type>
</CustomField>