sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadCompany__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード会社名</label>
    <type>Checkbox</type>
</CustomField>