sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadExcludeHojinkakuPartial__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadExcludeHojinkakuPartial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード会社名は法人格を除いて部分一致検索</label>
    <type>Checkbox</type>
</CustomField>