sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadFirstName__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadFirstName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード名</label>
    <type>Checkbox</type>
</CustomField>