sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadLastName__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadLastName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード姓</label>
    <type>Checkbox</type>
</CustomField>