sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadMail__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リードメールアドレス</label>
    <type>Checkbox</type>
</CustomField>