sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadNOExistCreateNew__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadNOExistCreateNew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:既存のリードがなければ新規作成する</label>
    <type>Checkbox</type>
</CustomField>