sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadOverwrite__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadOverwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:既存のリードを上書きする</label>
    <type>Checkbox</type>
</CustomField>