sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadPhone__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード電話</label>
    <type>Checkbox</type>
</CustomField>