sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadQueryRecordTypeIds__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadQueryRecordTypeIds__c</fullName>
    <label>自動連携:自動連携で検索対象のリードレコードタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>