sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadRecordTypes__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadRecordTypes__c</fullName>
    <label>自動連携:リードレコードタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>