sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadStreet__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadStreet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード町名・番地</label>
    <type>Checkbox</type>
</CustomField>