sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadURL__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadURL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リードWeb サイト</label>
    <type>Checkbox</type>
</CustomField>