sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiLeadZipCode__c.field-meta.xml
<CustomField>
    <fullName>RenkeiLeadZipCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード郵便番号</label>
    <type>Checkbox</type>
</CustomField>