sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiSpecificItems__c.field-meta.xml
<CustomField>
    <fullName>RenkeiSpecificItems__c</fullName>
    <inlineHelpText>他の条件に加え、取込時にセットしたメモ（手書きメモではありません）の内容と、『指定項目』の文字列が一致した場合に同一の取引先とみなします。</inlineHelpText>
    <label>自動連携:指定項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>