sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/RenkeiUpdateAllLeadsOnCondition__c.field-meta.xml
<CustomField>
    <fullName>RenkeiUpdateAllLeadsOnCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:条件に合致する既存リードは全て更新する</label>
    <type>Checkbox</type>
</CustomField>