sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/ScanSelectCampaign__c.field-meta.xml
<CustomField>
    <fullName>ScanSelectCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>スキャン:キャンペーン選択を有効化</label>
    <type>Checkbox</type>
</CustomField>