sfdx-source/SmartVisca/main/default/objects/NameCardBasicSetting__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>名刺基本設定のフォーマットのバージョン</description>
    <label>設定のバージョン</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>